# bevy-survival-game

./: .gitignore  Cargo.toml  README.md
assets/sprite/block/grass/: grass.xcf
assets/sprite/entities/player/: player.xcf
doc/: Index.md  Learning.md  TODO.md  Vivid mechanics.md
doc/Features/: Index.md  Load asset from internet.md  Multiplayer.md  Sprite animation.md
doc/UI/Menu/: Profile creation.md
src/: camera.rs  main.rs  player.rs  properties.rs  state_transition.rs  states.rs
src/objects/: mod.rs
src/objects/block/: block_and_sprite.rs  mod.rs
src/objects/entities/: mod.rs  player.rs
src/objects/item/: mod.rs
src/plugin/: camera.rs
src/tutorial/: mod.rs  planet.rs  spawn_planet.rs
src/ui/inventory/: mod.rs
