[package]
name = "bevy-survival-game"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy_animation = "0.14.1"
bevy_egui = "0.27.1"
bevy_sprite = "0.14.1"

[dependencies.bevy_rapier2d]
version = "0.26.0"
features = [
    "debug-render-2d"
]
